--- a/TheSpaces/Profile/Profile.storyboard
+++ b/TheSpaces/Profile/Profile.storyboard
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -15,8 +16,41 @@
                     <view key="view" contentMode="scaleToFill" id="8FE-7k-oQF">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="g7n-OD-nCB">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="128"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="COU-bQ-0qa"/>
+                                </constraints>
+                            </imageView>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="VmM-EC-zIO">
+                                <rect key="frame" x="87.5" y="138" width="200" height="34"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="200" id="LPe-Qh-FFD"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="IVh-NH-T92">
+                                <rect key="frame" x="87.5" y="200" width="200" height="34"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="200" id="2fT-2G-2Qz"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="m4m-Hl-Jj5"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="IVh-NH-T92" firstAttribute="top" secondItem="VmM-EC-zIO" secondAttribute="bottom" constant="28" id="5YW-F8-mTA"/>
+                            <constraint firstItem="IVh-NH-T92" firstAttribute="centerX" secondItem="8FE-7k-oQF" secondAttribute="centerX" id="8oo-El-rVi"/>
+                            <constraint firstItem="m4m-Hl-Jj5" firstAttribute="trailing" secondItem="g7n-OD-nCB" secondAttribute="trailing" id="ByI-9Z-Jo3"/>
+                            <constraint firstItem="g7n-OD-nCB" firstAttribute="top" secondItem="8FE-7k-oQF" secondAttribute="top" id="RcC-Qn-rMo"/>
+                            <constraint firstItem="g7n-OD-nCB" firstAttribute="leading" secondItem="m4m-Hl-Jj5" secondAttribute="leading" id="WKj-Ks-fuR"/>
+                            <constraint firstItem="VmM-EC-zIO" firstAttribute="centerX" secondItem="8FE-7k-oQF" secondAttribute="centerX" id="g1l-kJ-r2p"/>
+                            <constraint firstItem="VmM-EC-zIO" firstAttribute="top" secondItem="g7n-OD-nCB" secondAttribute="bottom" constant="10" id="gWQ-Ai-IMC"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jAZ-g9-Sf4" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -24,4 +58,9 @@
             <point key="canvasLocation" x="309" y="120"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
